alignment fix commit

--- a/src/components/FeatureItems.css
+++ b/src/components/FeatureItems.css
@@ -12,8 +12,9 @@
 .features-item {
     background: rgba(255, 255, 255, 0.05);
     padding: 30px 80px;
-    padding-bottom: 100px;
+    /* padding-bottom: 70px !important; */
     display: flex;
+    min-height: 350px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -27,6 +28,8 @@
     margin-top: 0px;
     margin-bottom: 7px;
     width: 70%;
+    /* border: 1px dashed gray; */
+    height: 12%;
 }
 
 .features-item p {
@@ -34,17 +37,31 @@
     color: rgba(255, 255, 255, 0.4);
     font-size: 0.9rem !important;
     line-height: 22px;
+    /* border: 1px dashed gray; */
+    height: 30%;
 }
 
 .features-item img {
+    /* border: 1px dashed gray; */
+
     max-width: 100%;
     height: 100px;
     margin: 0 auto;
 }
 
+/* .item-info {
+    border: 1px dashed rgb(124, 221, 104);
+    max-height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+} */
+
 @media screen and (max-width: 1690px) {
     .features-item {
-        padding: 15px 20px;
+        padding: 1px 20px;
+        /* padding-: 15px 20px; */
     }
     .features-item h3 {
         font-size: 1.9rem;
